fix image bleeding out of box

--- a/packages/css/sass/main.scss
+++ b/packages/css/sass/main.scss
@@ -58,3 +58,11 @@ blockquote {
 .twitter {
 	fill: $twitter-blue;
 }
+
+.tracks li a {
+	overflow: hidden;
+}
+
+.tracks li img {
+	position: absolute;
+}
